initial crappy placeholder index mockup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gitscm</title>
+  <title>git-scm.com</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+
+  <div class="row header">
+    <div class="span8">
+      <img src="/images/logo.png">
+      <h1>git</h1>
+      <h2>wicked-fast distributed version control</h2>
+    </div>
+    <div class="span4">
+      <input name="search"/>
+    </div>
+  </div>
+
+  <%= yield %>
+</div>
 
 </body>
 </html>
