--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,4 +10,22 @@
  *
  *= require_self
  *= require_tree .
+ *= require twitter/bootstrap
 */
+
+body {
+  padding-top: 10px;
+  padding-bottom: 40px;
+  background: #F1F0E8 !important;
+}
+.header h1 { font-size: 3.5em; }
+.header img { float: left; }
+.header h2 { font-size: 0.5em; color: #888; }
+
+.hero-unit { padding: 1px; background-color: #EAE9E2 !important; }
+
+.book {
+  padding: 4px;
+  background-color: #EAE9E2;
+}
+.book img { float: left; }
