begin doc grouping

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,14 +3,12 @@
   <li>
     Documentation
     <ul>
-      <li>Manual Pages</li>
-      <li>Reference</li>
-      <li>Tutorials</li>
+      <li>Book</li>
       <li>Videos</li>
+      <li>Reference</li>
+      <li>External</li>
     </ul>
   </li>
   <li>Downloads</li>
-  <li>Help & Support</li>
-  <li>Community</li>
-  <li>Tools & Hosting</li>
+  <li>Community & Help</li>
 </ul>
