mock designs in place

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,14 +1,24 @@
-<ul id="side-menu">
-  <li>About</li>
-  <li>
-    Documentation
+<aside class='sidebar'>
+  <nav>
     <ul>
-      <li>Book</li>
-      <li>Videos</li>
-      <li>Reference</li>
-      <li>External</li>
+      <li><a href="/about">About</a></li>
+      <li>
+        <a class="active" href="/doc">Documentation</a>
+        <ul>
+          <li><a class="" href="/doc/ref">Reference</a></li>
+          <li><a class="" href="/doc/book">Book</a></li>
+          <li><a class="" href="/doc/videos">Videos</a></li>
+          <li><a class="" href="/doc/ext">External Links</a></li>
+        </ul>
+      </li>
+      <li><a href="/downloads">Downloads</a></li>
+      <li><a href="/community">Community</a></li>
     </ul>
-  </li>
-  <li>Downloads</li>
-  <li>Community & Help</li>
-</ul>
+  </nav>
+  <hr class='sidebar' />
+  <div class='callout'>
+    <p>
+      The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+    </p>
+  </div>
+</aside>
