--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -20,7 +20,7 @@
 
 <div class="row">
   <div class="span7">
-    <img src="/images/mocks/menu-mock.jpg">
+    <a href="/doc"><img src="/images/mocks/menu-mock.jpg"></a>
   </div>
   <div class="span5">
     <img src="/images/mocks/download-mock.jpg">
