--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -1,5 +1,107 @@
-<h1>Documentation</h1>
-
-<% @docs.each do |doc| %>
-  <%= doc.name %><br/>
-<% end %>
+<div id='main'>
+  <h1>Documentation</h1>
+  <h2>Reference</h2>
+  <div class='callout ref-manual'>
+    <h3><a href="javascript:void(0);">Reference Manual</a></h3>
+    <p>
+      The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
+    </p>
+  </div>
+  <p class='quickref'>
+    Quick reference guides:
+    <a href="javascript:void(0);">DZone RefCard</a>
+    <small class='light'>(PDF) &nbsp;|&nbsp;</small>
+    <a href="javascript:void(0);">Visual Git Cheat Sheet</a>
+    <small class='light'>(SVG | PNG)</small>
+  </p>
+  <h2>Book</h2>
+  <p>
+    The entire Pro Git book, written by Scott Chacon and published by Apress, is available here.
+  </p>
+  <div class='two-column'>
+    <div class='column-left'>
+      <ol class='book-toc'>
+        <li class='chapter'>
+          <h2>1. <a href="#">Getting Started</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>2. <a href="#">Git Basics</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>3. <a href="#">Git Branching</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>4. <a href="#">Git on the Server</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>5. <a href="#">Distributed Git</a></h2>
+        </li>
+      </ol>
+    </div>
+    <div class='column-right'>
+      <ol class='book-toc'>
+        <li class='chapter'>
+          <h2>6. <a href="#">Git Tools</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>7. <a href="#">Customizing Git</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>8. <a href="#">Git and Other Systems</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2>9. <a href="#">Git Internals</a></h2>
+        </li>
+        <li class='chapter'>
+          <h2><a href="#">Index of Commands</a></h2>
+        </li>
+      </ol>
+    </div>
+  </div>
+  <h2>Videos</h2>
+  <div class='two-column'>
+    <div class='column-left'>
+      <ul class='video-thumbnails'>
+        <li>
+          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
+          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
+          <p class='description'>
+            <strong>Length:</strong> 7:18
+          </p>
+        </li>
+        <li>
+          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
+          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
+          <p class='description'>
+            <strong>Length:</strong> 7:18
+          </p>
+        </li>
+      </ul>
+    </div>
+    <div class='column-right'>
+      <ul class='video-thumbnails'>
+        <li>
+          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
+          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
+          <p class='description'>
+            <strong>Length:</strong> 7:18
+          </p>
+        </li>
+        <li>
+          <a href="javascript:void(0);"><img src="/images/tmp/screencast-thumbnail.png" /></a>
+          <h4><a href="javascript:void(0);">Name of this Screencast</a></h4>
+          <p class='description'>
+            <strong>Length:</strong> 7:18
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <p>
+    <strong><a href="javascript:void(0);">See all videos →</a></strong>
+  </p>
+  <h2>External Links</h2>
+  <p>
+    The <a href="/documentation/external-links">External Links section</a> is a curated, ever-evolving collection of tutorials, books, videos, and other Git resources.
+  </p>
+</div>
