--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -1,16 +1,51 @@
-<%= render "shared/head" %>
-
-<div class="container">
-  <%= render "shared/header" %>
-  <div class="row">
-    <div class="span3">
-      <%= render "shared/sidebar" %>
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <title>Git</title>
+    <meta charset='utf-8' />
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+    <link href="/stylesheets/git-scm.css" media="screen" rel="stylesheet" type="text/css" />
+    <!--[if (lte IE 7)]>
+      <link href="/stylesheets/ie7.css" media="screen" rel="stylesheet" type="text/css" />
+    <![endif]-->
+    <script src="/javascripts/modernizr.js" type="text/javascript"></script>
+    <!--[if (gte IE 6)&(lte IE 8)]>
+      <script src="/javascripts/selectivizr-min.js" type="text/javascript"></script>
+    <![endif]-->
+    <script src="http://use.typekit.com/lmc6xsg.js" type="text/javascript"></script>
+    <script type='text/javascript'>
+      //<![CDATA[
+        try{Typekit.load();}catch(e){}
+      //]]>
+    </script>
+  </head>
+  <body>
+    <div id='wrapper'>
+      <header>
+        <a href="/"><img src="/images/logo.png" /></a>
+        <form id='search'>
+          <input placeholder="Search entire site..." type="text" />
+        </form>
+      </header>
+      <div id='content-wrapper'>
+        <%= render 'shared/sidebar' %>
+        <div id='content'>
+          <%= yield %>
+        </div>
+      </div>
+      <footer>
+        <div class='site-source'>
+          The <a href="#">source for this page</a> (and this <a href="#">entire site</a>) is hosted on GitHub.<br>
+          Patches, suggestions, and comments are welcome.
+        </div>
+        <div class='sfc-member'>
+          Git is a member of the <a href="#">Software Freedom Conservancy</a>
+        </div>
+      </footer>
+      <script src="/javascripts/jquery-1.7.1.min.js" type="text/javascript"></script>
+      <script src="/javascripts/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
+      <script src="/javascripts/jquery.defaultvalue.js" type="text/javascript"></script>
+      <script src="/javascripts/site.js" type="text/javascript"></script>
     </div>
-    <div class="span9">
-      <%= yield %>
-    </div>
-  </div>
-</div>
-
-</body>
+  </body>
 </html>
