--- a/public/stylesheets/git-scm.css
+++ b/public/stylesheets/git-scm.css
@@ -136,9 +136,10 @@ ol {
 li {
   line-height: 22px; }
 
-ul.unstyled, ul.content-list, ul.video-thumbnails, ul.books-list,
+ul.unstyled, ul#reference-version, ul.content-list, ul.video-thumbnails, ul.books-list,
 ol.unstyled,
-ol#reference-nav,
+ol#reference-version,
+ol.reference-previous-versions,
 ol.content-list {
   margin-left: 0;
   list-style: none; }
@@ -220,6 +221,9 @@ address {
   margin-bottom: 22px;
   line-height: 22px;
   font-style: normal; }
+
+.light {
+  color: #9a9994; }
 
 small {
   font-size: 100%; }
@@ -310,6 +314,59 @@ aside nav ul {
         aside nav ul li ul li a.active {
           font-weight: bold; }
 
+a.dropdown-trigger {
+  padding: 4px 5px;
+  border: solid 1px transparent; }
+  a.dropdown-trigger.active {
+    position: relative;
+    z-index: 200;
+    background-color: #fff;
+    -moz-border-radius-topleft: 3px;
+    -webkit-border-top-left-radius: 3px;
+    -o-border-top-left-radius: 3px;
+    -ms-border-top-left-radius: 3px;
+    -khtml-border-top-left-radius: 3px;
+    border-top-left-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -o-border-top-right-radius: 3px;
+    -ms-border-top-right-radius: 3px;
+    -khtml-border-top-right-radius: 3px;
+    border-top-right-radius: 3px;
+    border: solid 1px #d8d7cf;
+    border-bottom: none; }
+
+.dropdown-panel {
+  display: none;
+  background-color: #fff;
+  border: solid 1px #d8d7cf;
+  position: absolute;
+  z-index: 199;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: 0 1px 2px #cccccc;
+  -webkit-box-shadow: 0 1px 2px #cccccc;
+  -o-box-shadow: 0 1px 2px #cccccc;
+  box-shadow: 0 1px 2px #cccccc; }
+  .dropdown-panel.left {
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+    -o-border-top-left-radius: 0;
+    -ms-border-top-left-radius: 0;
+    -khtml-border-top-left-radius: 0;
+    border-top-left-radius: 0; }
+  .dropdown-panel.right {
+    -moz-border-radius-topright: 0;
+    -webkit-border-top-right-radius: 0;
+    -o-border-top-right-radius: 0;
+    -ms-border-top-right-radius: 0;
+    -khtml-border-top-right-radius: 0;
+    border-top-right-radius: 0; }
+
 footer {
   overflow: hidden;
   *zoom: 1;
@@ -358,9 +415,8 @@ aside.sidebar {
     aside.sidebar .callout p {
       margin-bottom: 0; }
 
-ol#reference-nav {
-  overflow: hidden;
-  *zoom: 1;
+#reference-version {
+  position: relative;
   background-color: #ebe9e1;
   background-color: rgba(223, 221, 213, 0.33);
   -moz-border-radius: 3px;
@@ -370,18 +426,94 @@ ol#reference-nav {
   -khtml-border-radius: 3px;
   border-radius: 3px;
   padding: 8px 12px 6px 12px;
+  margin-bottom: 10px;
   font-size: 13px;
   font-weight: bold; }
-  ol#reference-nav li {
-    display: inline; }
-    ol#reference-nav li a, ol#reference-nav li span {
+  #reference-version .light {
+    font-weight: normal; }
+  #reference-version a {
+    font-weight: bold;
+    position: relative;
+    top: -5px; }
+    #reference-version a#reference-versions-trigger {
       float: left;
-      display: block;
-      padding: 3px 6px 3px 7px; }
-    ol#reference-nav li span {
-      color: #9a9994; }
-    ol#reference-nav li.topics {
+      margin-right: 6px; }
+    #reference-version a#reference-topics-trigger {
       float: right; }
+  #reference-version .dropdown-panel {
+    top: 33px; }
+
+#previous-versions-dropdown {
+  padding-top: 6px; }
+  #previous-versions-dropdown footer {
+    margin-top: 0;
+    padding: 6px 12px;
+    background-color: #eae9e0;
+    font-weight: normal;
+    font-size: 11px;
+    color: #4e443c; }
+
+#topics-dropdown {
+  right: 12px;
+  padding: 12px;
+  width: 650px;
+  font-weight: normal;
+  line-height: 1; }
+  #topics-dropdown ul {
+    margin-bottom: 0; }
+  #topics-dropdown li {
+    line-height: 17.6px; }
+  #topics-dropdown h3 {
+    font-size: 13px; }
+  #topics-dropdown a {
+    font-weight: normal;
+    padding: 0; }
+  #topics-dropdown .three-column {
+    overflow: hidden;
+    *zoom: 1; }
+    #topics-dropdown .three-column .column-left {
+      width: 31%;
+      float: left;
+      padding-right: 3%; }
+    #topics-dropdown .three-column .column-middle {
+      width: 31%;
+      float: left;
+      padding-right: 3%; }
+    #topics-dropdown .three-column .column-right {
+      width: 31%;
+      float: left; }
+
+ol.reference-previous-versions {
+  margin-bottom: 0; }
+  ol.reference-previous-versions li a {
+    overflow: hidden;
+    *zoom: 1;
+    display: block;
+    padding: 2px 12px; }
+    ol.reference-previous-versions li a:hover {
+      background-color: #edf7f8; }
+    ol.reference-previous-versions li a.more {
+      font-size: 11px; }
+    ol.reference-previous-versions li a span.version {
+      float: left;
+      min-width: 40px; }
+    ol.reference-previous-versions li a span.changes {
+      padding-left: 18px;
+      padding-right: 16px;
+      font-size: 11px;
+      font-weight: normal;
+      color: #4e443c;
+      float: left; }
+      ol.reference-previous-versions li a span.changes.yes {
+        background: transparent url(/images/icons/change-yes.png) 10px 8px no-repeat; }
+      ol.reference-previous-versions li a span.changes.no {
+        background: transparent url(/images/icons/change-no.png) 10px 8px no-repeat;
+        color: #9a9994; }
+    ol.reference-previous-versions li a em.date {
+      float: right;
+      font-size: 11px;
+      color: #9a9994;
+      font-weight: normal; }
 
 .callout.quickref {
   background: #e9e8e0 url(/images/icons/document.png) 14px 7px no-repeat;
