--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -3,9 +3,9 @@
   <div class='callout quickref'>
     <p>
       Quick reference guides:
-      <a href="javascript:void(0);">DZone RefCard</a>
+      <a href=" https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf">Salesforce Cheat Sheet</a>
       <small class='light'>(PDF) &nbsp;|&nbsp;</small>
-      <a href="javascript:void(0);">Visual Git Cheat Sheet</a>
+      <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
       <small class='light'>(SVG | PNG)</small>
     </p>
   </div>
