--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -35,7 +35,7 @@
       </div>
       <footer>
         <div class='site-source'>
-          The <a href="#">source for this page</a> (and this <a href="#">entire site</a>) is hosted on GitHub.<br>
+          The source for this <a href="https://github.com/git/gitscm">site</a> is hosted on GitHub.<br>
           Patches, suggestions, and comments are welcome.
         </div>
         <div class='sfc-member'>
