--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -13,108 +13,108 @@
     <div class='column-left'>
       <h3>Setup and Config</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">config</a></li>
-        <li><a href="javascript:void(0);">help</a></li>
+        <li><%= man('git-config') %></li>
+        <li><%= man('git-help') %></li>
       </ul>
       <h3>Getting and Creating Projects</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">init</a></li>
-        <li><a href="javascript:void(0);">clone</a></li>
+        <li><%= man('git-init') %></li>
+        <li><%= man('git-clone') %></li>
       </ul>
       <h3>Basic Snapshotting</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">add</a></li>
-        <li><a href="javascript:void(0);">status</a></li>
-        <li><a href="javascript:void(0);">diff</a></li>
-        <li><a href="javascript:void(0);">commit</a></li>
-        <li><a href="javascript:void(0);">reset</a></li>
-        <li><a href="javascript:void(0);">rm</a></li>
-        <li><a href="javascript:void(0);">mv</a></li>
+        <li><%= man('git-add') %></li>
+        <li><%= man('git-status') %></li>
+        <li><%= man('git-diff') %></li>
+        <li><%= man('git-commit') %></li>
+        <li><%= man('git-reset') %></li>
+        <li><%= man('git-rm') %></li>
+        <li><%= man('git-mv') %></li>
       </ul>
       <h3>Branching and Merging</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">branch</a></li>
-        <li><a href="javascript:void(0);">checkout</a></li>
-        <li><a href="javascript:void(0);">merge</a></li>
-        <li><a href="javascript:void(0);">mergetool</a></li>
-        <li><a href="javascript:void(0);">log</a></li>
-        <li><a href="javascript:void(0);">stash</a></li>
-        <li><a href="javascript:void(0);">tag</a></li>
+        <li><%= man('git-branch') %></li>
+        <li><%= man('git-checkout') %></li>
+        <li><%= man('git-merge') %></li>
+        <li><%= man('git-mergetool') %></li>
+        <li><%= man('git-log') %></li>
+        <li><%= man('git-stash') %></li>
+        <li><%= man('git-tag') %></li>
       </ul>
       <h3>Sharing and Updating Projects</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">fetch</a></li>
-        <li><a href="javascript:void(0);">pull</a></li>
-        <li><a href="javascript:void(0);">push</a></li>
-        <li><a href="javascript:void(0);">remote</a></li>
-        <li><a href="javascript:void(0);">submodule</a></li>
+        <li><%= man('git-fetch') %></li>
+        <li><%= man('git-pull') %></li>
+        <li><%= man('git-push') %></li>
+        <li><%= man('git-remote') %></li>
+        <li><%= man('git-submodule') %></li>
       </ul>
       <h3>Inspection and Comparison</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">show</a></li>
-        <li><a href="javascript:void(0);">log</a></li>
-        <li><a href="javascript:void(0);">diff</a></li>
-        <li><a href="javascript:void(0);">shortlog</a></li>
-        <li><a href="javascript:void(0);">describe</a></li>
+        <li><%= man('git-show') %></li>
+        <li><%= man('git-log') %></li>
+        <li><%= man('git-diff') %></li>
+        <li><%= man('git-shortlog') %></li>
+        <li><%= man('git-describe') %></li>
       </ul>
       <h3>Patching</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">am</a></li>
-        <li><a href="javascript:void(0);">apply</a></li>
-        <li><a href="javascript:void(0);">cherry-pick</a></li>
-        <li><a href="javascript:void(0);">rebase</a></li>
+        <li><%= man('git-am') %></li>
+        <li><%= man('git-apply') %></li>
+        <li><%= man('git-cherry-pick') %></li>
+        <li><%= man('git-rebase') %></li>
       </ul>
     </div>
     <div class='column-right'>
       <h3>Debugging</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">bisect</a></li>
-        <li><a href="javascript:void(0);">blame</a></li>
+        <li><%= man('git-bisect') %></li>
+        <li><%= man('git-blame') %></li>
       </ul>
       <h3>Email</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">am</a></li>
-        <li><a href="javascript:void(0);">apply</a></li>
-        <li><a href="javascript:void(0);">format-patch</a></li>
-        <li><a href="javascript:void(0);">send-email</a></li>
-        <li><a href="javascript:void(0);">request-pull</a></li>
+        <li><%= man('git-am') %></li>
+        <li><%= man('git-apply') %></li>
+        <li><%= man('git-format-patch') %></li>
+        <li><%= man('git-send-email') %></li>
+        <li><%= man('git-request-pull') %></li>
       </ul>
       <h3>External Systems</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">svn</a></li>
-        <li><a href="javascript:void(0);">fast-import</a></li>
+        <li><%= man('git-svn') %></li>
+        <li><%= man('git-fast-import') %></li>
       </ul>
       <h3>Administration</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">gc</a></li>
-        <li><a href="javascript:void(0);">fsck</a></li>
-        <li><a href="javascript:void(0);">reflog</a></li>
-        <li><a href="javascript:void(0);">filter-branch</a></li>
-        <li><a href="javascript:void(0);">instaweb</a></li>
-        <li><a href="javascript:void(0);">archive</a></li>
+        <li><%= man('git-gc') %></li>
+        <li><%= man('git-fsck') %></li>
+        <li><%= man('git-reflog') %></li>
+        <li><%= man('git-filter-branch') %></li>
+        <li><%= man('git-instaweb') %></li>
+        <li><%= man('git-archive') %></li>
       </ul>
       <h3>Server Admin</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">daemon</a></li>
-        <li><a href="javascript:void(0);">update-server-info</a></li>
+        <li><%= man('git-daemon') %></li>
+        <li><%= man('git-update-server-info') %></li>
       </ul>
       <h3>Plumbing Commands</h3>
       <ul class='unstyled'>
-        <li><a href="javascript:void(0);">cat-file</a></li>
-        <li><a href="javascript:void(0);">commit-tree</a></li>
-        <li><a href="javascript:void(0);">count-objects</a></li>
-        <li><a href="javascript:void(0);">diff-index</a></li>
-        <li><a href="javascript:void(0);">hash-object</a></li>
-        <li><a href="javascript:void(0);">merge-base</a></li>
-        <li><a href="javascript:void(0);">read-tree</a></li>
-        <li><a href="javascript:void(0);">rev-list</a></li>
-        <li><a href="javascript:void(0);">rev-parse</a></li>
-        <li><a href="javascript:void(0);">show-ref</a></li>
-        <li><a href="javascript:void(0);">symbolic-ref</a></li>
-        <li><a href="javascript:void(0);">update-index</a></li>
-        <li><a href="javascript:void(0);">update-ref</a></li>
-        <li><a href="javascript:void(0);">verify-pack</a></li>
-        <li><a href="javascript:void(0);">write-tree</a></li>
+        <li><%= man('git-cat-file') %></li>
+        <li><%= man('git-commit-tree') %></li>
+        <li><%= man('git-count-objects') %></li>
+        <li><%= man('git-diff-index') %></li>
+        <li><%= man('git-hash-object') %></li>
+        <li><%= man('git-merge-base') %></li>
+        <li><%= man('git-read-tree') %></li>
+        <li><%= man('git-rev-list') %></li>
+        <li><%= man('git-rev-parse') %></li>
+        <li><%= man('git-show-ref') %></li>
+        <li><%= man('git-symbolic-ref') %></li>
+        <li><%= man('git-update-index') %></li>
+        <li><%= man('git-update-ref') %></li>
+        <li><%= man('git-verify-pack') %></li>
+        <li><%= man('git-write-tree') %></li>
       </ul>
     </div>
   </div>
