switch to scss, update html, add search stub

--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -4,7 +4,7 @@
     <title>Git</title>
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-    <link href="/stylesheets/git-scm.css" media="screen" rel="stylesheet" type="text/css" />
+    <%= stylesheet_link_tag "git-scm", :media => "all" %>
     <!--[if (lte IE 7)]>
       <link href="/stylesheets/ie7.css" media="screen" rel="stylesheet" type="text/css" />
     <![endif]-->
@@ -20,13 +20,13 @@
     </script>
   </head>
   <body>
-    <div id='wrapper'>
+    <div class='inner'>
       <header>
         <a href="/"><img src="/images/logo.png" /></a>
-        <form id='search'>
-          <input placeholder="Search entire site..." type="text" />
-        </form>
+        <%= render 'shared/search' %>
       </header>
+    </div>
+    <div class='inner'>
       <div id='content-wrapper'>
         <%= render 'shared/sidebar' %>
         <div id='content'>
@@ -35,7 +35,7 @@
       </div>
       <footer>
         <div class='site-source'>
-          The source for this <a href="https://github.com/git/gitscm">site</a> is hosted on GitHub.<br>
+          The <a href="#">source for this page</a> (and this <a href="#">entire site</a>) is hosted on GitHub.<br>
           Patches, suggestions, and comments are welcome.
         </div>
         <div class='sfc-member'>
