pulled in jasons changes, moving to using his haml directly

--- a/app/assets/stylesheets/git-scm.css.scss
+++ b/app/assets/stylesheets/git-scm.css.scss
@@ -4,6 +4,7 @@
 @import "variables.css.scss";
 @import "typography.css.scss";
 @import "layout.css.scss";
+@import "front-page.css.scss";
 @import "sidebar.css.scss";
 @import "reference.css.scss";
 @import "forms.css.scss";
