--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -82,7 +82,17 @@ aside {
 header {
   margin-top: 14px;
   position: relative;
-  padding-bottom: 30px;
+  padding-bottom: 26px;
+  #tagline {
+    display: block;
+    position: absolute;
+    top: 11px;
+    left: 120px;
+    margin-top: 1px;
+    color: $light-font-color;
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 // Navigation
@@ -149,6 +159,7 @@ a.dropdown-trigger {
 
 // Footer
 footer {
+  clear: both;
   @include clearfix;
   margin-top: 35px;
   border-top: solid 1px $base-border-color;
