--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -53,7 +53,7 @@ form#search {
   top: 2px;
   right: -8px;
   width: 384px;
-  background: transparent url(/images/bg/search-header.jpg) 0 1px repeat-x;
+  background: #398a94 url(/images/bg/search-header.jpg) 0 1px repeat-x;
   @include border-radius(3px);
   @include box-shadow(0 0 7px rgba(0, 0, 0, 0.25));
   border-bottom: solid 1px $base-border-color;
