--- a/app/views/layouts/sidebar.html.erb
+++ b/app/views/layouts/sidebar.html.erb
@@ -8,7 +8,7 @@
     <!--[if (lte IE 7)]>
       <link href="/stylesheets/ie7.css" media="screen" rel="stylesheet" type="text/css" />
     <![endif]-->
-    <script src="/javascripts/modernizr.js" type="text/javascript"></script>
+    <%= javascript_include_tag "modernizr.js" %>
     <!--[if (gte IE 6)&(lte IE 8)]>
       <script src="/javascripts/selectivizr-min.js" type="text/javascript"></script>
     <![endif]-->
@@ -42,10 +42,10 @@
           Git is a member of the <a href="#">Software Freedom Conservancy</a>
         </div>
       </footer>
-      <script src="/javascripts/jquery-1.7.1.min.js" type="text/javascript"></script>
-      <script src="/javascripts/jquery-ui-1.8.18.custom.min.js" type="text/javascript"></script>
-      <script src="/javascripts/jquery.defaultvalue.js" type="text/javascript"></script>
-      <script src="/javascripts/site.js" type="text/javascript"></script>
+      <%= javascript_include_tag "jquery-1.7.1.min.js" %>
+      <%= javascript_include_tag "jquery-ui-1.8.18.custom.min.js" %>
+      <%= javascript_include_tag "jquery.defaultvalue.js" %>
+      <%= javascript_include_tag "site.js" %>
     </div>
   </body>
 </html>
