pull in jasons keyboard nav

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,25 +14,25 @@
         %td.matches
           %ul
             %li
-              <a href="#">Show all results...</a>
+              <a href="/search/results">Show all results...</a>
       %tr
         %td.category Reference
         %td.matches
           %ul
             %li
-              <a href="#">git-rebase(1) Manual Page</a>
+              <a href="/documentation/reference/rebase.html">git-rebase(1) Manual Page</a>
       %tr
         %td.category Book
         %td.matches
           %ul
             %li
-              <a href="#">Rebasing <span class="metadata">Chapter 3: Git Branching</span></a>
+              <a href="/documentation/book/rebasing.html">Rebasing <span class="metadata">Chapter 3: Git Branching</span></a>
       %tr
         %td.category Videos
         %td.matches
           %ul
             %li
-              <a href="#">Understanding Rebase and Merge <span class="metadata">Length: 8:12</span></a>
+              <a href="/documentation/videos/understanding-rebase-and-merge.html">Understanding Rebase and Merge <span class="metadata">Length: 8:12</span></a>
             %li
-              <a href="#">Another Video About Rebasing<span class="metadata">Length: 24:55</span></a>
+              <a href="/documentation/videos/another-video.html">Another Video About Rebasing<span class="metadata">Length: 24:55</span></a>
 
