--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -105,7 +105,7 @@ form#search {
           font-weight: normal;
           font-size: 11px;
         }
-        &:hover {
+        &:hover, &.highlight {
           color: #fff;
           text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
           background: #55bec4;
