basic, crappy search functionality

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,35 +4,6 @@
     \--random-clever-tagline-here
 
   %form#search
-    <input placeholder="Search entire site..." type="text" />
+    <input id="search-text" placeholder="Search entire site..." autocomplete="off" type="text" />
 
   %div#search-results
-    %header Search Results
-    %table
-      %tr.show-all
-        %td.category &nbsp;
-        %td.matches
-          %ul
-            %li
-              <a href="/search/results">Show all results...</a>
-      %tr
-        %td.category Reference
-        %td.matches
-          %ul
-            %li
-              <a href="/documentation/reference/rebase.html">git-rebase(1) Manual Page</a>
-      %tr
-        %td.category Book
-        %td.matches
-          %ul
-            %li
-              <a href="/documentation/book/rebasing.html">Rebasing <span class="metadata">Chapter 3: Git Branching</span></a>
-      %tr
-        %td.category Videos
-        %td.matches
-          %ul
-            %li
-              <a href="/documentation/videos/understanding-rebase-and-merge.html">Understanding Rebase and Merge <span class="metadata">Length: 8:12</span></a>
-            %li
-              <a href="/documentation/videos/another-video.html">Another Video About Rebasing<span class="metadata">Length: 24:55</span></a>
-
