pulling raw html field, split out command lists

--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -11,111 +11,21 @@
   </div>
   <div class='two-column'>
     <div class='column-left'>
-      <h3>Setup and Config</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-config') %></li>
-        <li><%= man('git-help') %></li>
-      </ul>
-      <h3>Getting and Creating Projects</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-init') %></li>
-        <li><%= man('git-clone') %></li>
-      </ul>
-      <h3>Basic Snapshotting</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-add') %></li>
-        <li><%= man('git-status') %></li>
-        <li><%= man('git-diff') %></li>
-        <li><%= man('git-commit') %></li>
-        <li><%= man('git-reset') %></li>
-        <li><%= man('git-rm') %></li>
-        <li><%= man('git-mv') %></li>
-      </ul>
-      <h3>Branching and Merging</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-branch') %></li>
-        <li><%= man('git-checkout') %></li>
-        <li><%= man('git-merge') %></li>
-        <li><%= man('git-mergetool') %></li>
-        <li><%= man('git-log') %></li>
-        <li><%= man('git-stash') %></li>
-        <li><%= man('git-tag') %></li>
-      </ul>
-      <h3>Sharing and Updating Projects</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-fetch') %></li>
-        <li><%= man('git-pull') %></li>
-        <li><%= man('git-push') %></li>
-        <li><%= man('git-remote') %></li>
-        <li><%= man('git-submodule') %></li>
-      </ul>
-      <h3>Inspection and Comparison</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-show') %></li>
-        <li><%= man('git-log') %></li>
-        <li><%= man('git-diff') %></li>
-        <li><%= man('git-shortlog') %></li>
-        <li><%= man('git-describe') %></li>
-      </ul>
-      <h3>Patching</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-am') %></li>
-        <li><%= man('git-apply') %></li>
-        <li><%= man('git-cherry-pick') %></li>
-        <li><%= man('git-rebase') %></li>
-      </ul>
+      <%= render 'shared/ref/setup' %>
+      <%= render 'shared/ref/creating' %>
+      <%= render 'shared/ref/snapshot' %>
+      <%= render 'shared/ref/branching' %>
+      <%= render 'shared/ref/sharing' %>
+      <%= render 'shared/ref/inspection' %>
+      <%= render 'shared/ref/patching' %>
     </div>
     <div class='column-right'>
-      <h3>Debugging</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-bisect') %></li>
-        <li><%= man('git-blame') %></li>
-      </ul>
-      <h3>Email</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-am') %></li>
-        <li><%= man('git-apply') %></li>
-        <li><%= man('git-format-patch') %></li>
-        <li><%= man('git-send-email') %></li>
-        <li><%= man('git-request-pull') %></li>
-      </ul>
-      <h3>External Systems</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-svn') %></li>
-        <li><%= man('git-fast-import') %></li>
-      </ul>
-      <h3>Administration</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-gc') %></li>
-        <li><%= man('git-fsck') %></li>
-        <li><%= man('git-reflog') %></li>
-        <li><%= man('git-filter-branch') %></li>
-        <li><%= man('git-instaweb') %></li>
-        <li><%= man('git-archive') %></li>
-      </ul>
-      <h3>Server Admin</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-daemon') %></li>
-        <li><%= man('git-update-server-info') %></li>
-      </ul>
-      <h3>Plumbing Commands</h3>
-      <ul class='unstyled'>
-        <li><%= man('git-cat-file') %></li>
-        <li><%= man('git-commit-tree') %></li>
-        <li><%= man('git-count-objects') %></li>
-        <li><%= man('git-diff-index') %></li>
-        <li><%= man('git-hash-object') %></li>
-        <li><%= man('git-merge-base') %></li>
-        <li><%= man('git-read-tree') %></li>
-        <li><%= man('git-rev-list') %></li>
-        <li><%= man('git-rev-parse') %></li>
-        <li><%= man('git-show-ref') %></li>
-        <li><%= man('git-symbolic-ref') %></li>
-        <li><%= man('git-update-index') %></li>
-        <li><%= man('git-update-ref') %></li>
-        <li><%= man('git-verify-pack') %></li>
-        <li><%= man('git-write-tree') %></li>
-      </ul>
+      <%= render 'shared/ref/debugging' %>
+      <%= render 'shared/ref/email' %>
+      <%= render 'shared/ref/external' %>
+      <%= render 'shared/ref/admin' %>
+      <%= render 'shared/ref/server' %>
+      <%= render 'shared/ref/plumbing' %>
     </div>
   </div>
 </div>
