link salesforce cheet sheet

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -9,9 +9,9 @@
   </div>
   <p class='quickref'>
     Quick reference guides:
-    <a href="javascript:void(0);">DZone RefCard</a>
+    <a href=" https://na1.salesforce.com/help/doc/en/salesforce_git_developer_cheatsheet.pdf">Salesforce Cheet Sheet</a>
     <small class='light'>(PDF) &nbsp;|&nbsp;</small>
-    <a href="javascript:void(0);">Visual Git Cheat Sheet</a>
+    <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
     <small class='light'>(SVG | PNG)</small>
   </p>
   <h2>Book</h2>
