--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -6,27 +6,21 @@
       <h3>Short &amp; Sweet</h3>
       <ul class='content-list'>
         <li>
-          <h4><a href="javascript:void(0);">Introductory Reference &amp; Tutorial</a></h4>
+          <h4><a href="http://gitref.org/">Introductory Reference &amp; Tutorial</a></h4>
           <p class='description'>
-            The full contents of the <a href="#">Git Reference site</a> is now available here. This introductory walkthrough acts as a nice tutorial.
+            The full contents of the <a href="http://gitref.org/">Git Reference site</a> is now available here. This introductory walkthrough acts as a nice tutorial.
           </p>
         </li>
         <li>
-          <h4><a href="javascript:void(0);">Official Git Tutorial</a></h4>
+          <h4><a href="/ref/gittutorial">Official Git Tutorial</a></h4>
           <p class='description'>
             The official gittutorial man page is a good place to start.
           </p>
         </li>
         <li>
-          <h4><a href="javascript:void(0);">Everyday Git</a></h4>
+          <h4><a href="/ref/everyday">Everyday Git</a></h4>
           <p class='description'>
             Learn the basics with 20 of the most common commands.
-          </p>
-        </li>
-        <li>
-          <h4><a href="javascript:void(0);">SVN Crash Course</a></h4>
-          <p class='description'>
-            A helpful introduction to making the leap from Subversion to Git.
           </p>
         </li>
       </ul>
@@ -35,25 +29,25 @@
       <h3>Diving Deeper</h3>
       <ul class='content-list'>
         <li>
-          <h4><a href="javascript:void(0);">Git for Designers</a></h4>
+          <h4><a href="http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
           <p class='description'>
             No knowledge of version control? No problem.
           </p>
         </li>
         <li>
-          <h4><a href="javascript:void(0);">Git for Computer Scientists</a></h4>
+          <h4><a href="http://eagain.net/articles/git-for-computer-scientists/">Git for Computer Scientists</a></h4>
           <p class='description'>
             A quick introduction to Git internals for people who aren't scared by words like Directed Acyclic Graph.
           </p>
         </li>
         <li>
-          <h4><a href="javascript:void(0);">Git Magic</a></h4>
+          <h4><a href="http://www-cs-students.stanford.edu/~blynn/gitmagic/">Git Magic</a></h4>
           <p class='description'>
-            An alternative book with the source <a href="#">online</a>.
+            An alternative book with the source <a href="http://github.com/blynn/gitmagic/tree/master">online</a>.
           </p>
         </li>
         <li>
-          <h4><a href="javascript:void(0);">Help.GitHub</a></h4>
+          <h4><a href="http://help.github.com/">Help.GitHub</a></h4>
           <p class='description'>
             Guides on a variety of Git and GitHub related topics.
           </p>
@@ -66,23 +60,23 @@
     <div class='column-left'>
       <ul class='books-list'>
         <li>
-          <a href="javascript:void(0);"><img src="/images/books/pragmatic-version-control.jpg" /></a>
-          <h4><a href="javascript:void(0);">Pragmatic Version Control Using Git</a></h4>
+          <a href="http://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git"><img src="/images/books/pragmatic-version-control.jpg" /></a>
+          <h4><a href="http://www.pragprog.com/titles/tsgit/pragmatic-version-control-using-git">Pragmatic Version Control Using Git</a></h4>
           <p class='description'>
             By Travis Swicegood
           </p>
         </li>
         <li>
-          <a href="javascript:void(0);"><img src="/images/books/pro-git.jpg" /></a>
-          <h4><a href="javascript:void(0);">Pro Git</a></h4>
+          <a href="/book"><img src="/images/books/pro-git.jpg" /></a>
+          <h4><a href="/book">Pro Git</a></h4>
           <p class='description'>
             By Scott Chacon
             <img class="creative-commons" src="/images/creative-commons.png" />
           </p>
         </li>
         <li>
-          <a href="javascript:void(0);"><img src="/images/books/git-internals.jpg" /></a>
-          <h4><a href="javascript:void(0);">Git Internals Peepcode PDF</a></h4>
+          <a href="http://peepcode.com/products/git-internals-pdf"><img src="/images/books/git-internals.jpg" /></a>
+          <h4><a href="http://peepcode.com/products/git-internals-pdf">Git Internals Peepcode PDF</a></h4>
           <p class='description'>
             By Scott Chacon
           </p>
@@ -92,15 +86,15 @@
     <div class='column-right'>
       <ul class='books-list'>
         <li>
-          <a href="javascript:void(0);"><img src="/images/books/version-control-with-git.jpg" /></a>
-          <h4><a href="javascript:void(0);">Version Control with Git</a></h4>
+          <a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123"><img src="/images/books/version-control-with-git.jpg" /></a>
+          <h4><a href="http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123">Version Control with Git</a></h4>
           <p class='description'>
             By Jon Loeliger
           </p>
         </li>
         <li>
-          <a href="javascript:void(0);"><img src="/images/books/pragmatic-guide-to-git.jpg" /></a>
-          <h4><a href="javascript:void(0);">Pragmatic Guide to Git</a></h4>
+          <a href="http://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git"><img src="/images/books/pragmatic-guide-to-git.jpg" /></a>
+          <h4><a href="http://www.pragprog.com/titles/pg_git/pragmatic-guide-to-git">Pragmatic Guide to Git</a></h4>
           <p class='description'>
             By Travis Swicegood
           </p>
@@ -113,17 +107,10 @@
     <div class='column-left'>
       <ul class='video-thumbnails'>
         <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/external-video.jpg" /></a>
-          <h4><a href="javascript:void(0);">Tech Talk: Linus Torvalds on git</a></h4>
+          <a href="http://www.youtube.com/watch?v=4XpnKHJAok8"><img src="/images/videos/linus.jpg" /></a>
+          <h4><a href="http://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on Git</a></h4>
           <p class='description'>
-            Linus Torvalds visits Google to share his thoughts on git, the SCM system he created two years earlier.
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/external-video.jpg" /></a>
-          <h4><a href="javascript:void(0);">Another Video Title</a></h4>
-          <p class='description'>
-            The video description here. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Linus Torvalds visits Google to share his thoughts on Git, the SCM system he created.
           </p>
         </li>
       </ul>
@@ -131,17 +118,10 @@
     <div class='column-right'>
       <ul class='video-thumbnails'>
         <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/external-video.jpg" /></a>
-          <h4><a href="javascript:void(0);">Another Video Title</a></h4>
+          <a href="http://www.youtube.com/watch?v=ZDR433b0HJY"><img src="/images/videos/introgit.png" /></a>
+          <h4><a href="http://www.youtube.com/watch?v=ZDR433b0HJY">Introduction to Git: Scott Chacon</a></h4>
           <p class='description'>
-            The video description here. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          </p>
-        </li>
-        <li>
-          <a href="javascript:void(0);"><img src="/images/tmp/external-video.jpg" /></a>
-          <h4><a href="javascript:void(0);">Another Video Title</a></h4>
-          <p class='description'>
-            The video description here. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            This talk introduces the Git Version Control System by looking at what Git is doing when you run the commands you need to do basic version control with it.
           </p>
         </li>
       </ul>
