--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Documentation</h1>
   <h2>Reference</h2>
   <div class='callout ref-manual'>
-    <h3><a href="javascript:void(0);">Reference Manual</a></h3>
+    <h3><a href="/ref">Reference Manual</a></h3>
     <p>
       The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
     </p>
@@ -98,7 +98,7 @@
     </div>
   </div>
   <p>
-    <strong><a href="javascript:void(0);">See all videos →</a></strong>
+    <strong><a href="/videos">See all videos →</a></strong>
   </p>
   <h2>External Links</h2>
   <p>
