--- a/templates/section.html.erb
+++ b/templates/section.html.erb
@@ -1,8 +1,14 @@
 <% if !anchor.nil? %>
-  <a name="#<%= anchor %>">
+  <a name="<%= anchor %>">
 <% end %>
-<h<%= level %> id="<%= section_id %>"><%= name %></h<%= level%>>
-<% if !anchor.nil? %>
-  </a>
-<% end %>
-<div class="sectionbody"><%= content %></div>
+<div class="sect<%= level %>">
+  <h<%= level + 1 %> id="<%= section_id %>"><%= name %></h<%= level + 1 %>>
+  <% if !anchor.nil? %>
+    </a>
+  <% end %>
+  <% if level == 1 %>
+    <div class="sectionbody"><%= content %></div>
+  <% else %>
+    <%= content %>
+  <% end %>
+</div>
