--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -54,6 +54,6 @@
               = yield :sidebar
 
           %div#content
-            =yield
+            ~yield
 
         = partial 'shared/footer'
