better search - name prefix, then body term

--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -6,7 +6,7 @@
       %ul
         %li
           <a href="/search/results">Show all results...</a>
-  - @data.each do |cat|
+  - @data[:results].each do |cat|
     %tr
       %td.category
         = cat[:category]
