--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -17,8 +17,21 @@
 	  padding: 1em;
 	}
 
+  .literalblock {
+    .content pre tt {
+      background-color: #eee0b5;
+      padding: 2px;
+      font-family: $fixed-width-font-family;
+    }
+    margin-bottom: 10px;
+  }
+
+  dt.hdlist1 {
+    font-family: $fixed-width-font-family;
+  }
+
 	// Man pages
-	div.verseblock-content {
+	pre.content {
 	  background-color: rgba(223, 221, 213, 0.33);
 	  padding: 1em;
 	  margin-bottom: 1em;
