Correct spelling to "lightning"

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -23,7 +23,7 @@
             Git is a <strong>free</strong> & <strong>open source, distributed version control system</strong> designed to handle everything from small to very large projects with speed and efficiency.
 
           %p
-            Git is <a href="#">easy to learn</a>, has <a href="#">lightening fast performance</a> and a <a href="#">tiny footprint</a>. It outclasses SCM tools like Mercurial, Subversion, CVS, Perforce, and Team Foundation Server with features like <a href="#">cheap local branching</a>, <a href="#">distributed workflows</a>, and convenient <a href="#">staging areas</a>.
+            Git is <a href="#">easy to learn</a>, has <a href="#">lightning fast performance</a> and a <a href="#">tiny footprint</a>. It outclasses SCM tools like Mercurial, Subversion, CVS, Perforce, and Team Foundation Server with features like <a href="#">cheap local branching</a>, <a href="#">distributed workflows</a>, and convenient <a href="#">staging areas</a>.
 
           <img class="illustration" src="images/branching-illustration.png" />
 
