previous releases dropdown

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,37 +1,20 @@
-<a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version 1.7.9.2 ▾</a>
-<span class="light">git-rebase last updated in 1.7.9.0</span>
+<a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version <%= @version.name %> ▾</a>
+<span class="light"><%= @file.name %> last updated in 1.7.9.0</span>
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
   <ol class='reference-previous-versions'>
-    <li>
-      <a href="#"><span class="version">1.7.9.1</span> <span class="changes no">git-rebase unchanged</span> <em class="date">2/22/12</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.9.0</span> <span class="changes yes">git-rebase updated</span> <em class="date">1/22/12</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.9</span> <span class="changes no">git-rebase unchanged</span> <em class="date">12/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.8</span> <span class="changes no">git-rebase unchanged</span> <em class="date">11/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.7</span> <span class="changes no">git-rebase unchanged</span> <em class="date">10/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.6</span> <span class="changes yes">git-rebase updated</span> <em class="date">9/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.5</span> <span class="changes no">git-rebase unchanged</span> <em class="date">8/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.4</span> <span class="changes no">git-rebase unchanged</span> <em class="date">7/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.3</span> <span class="changes no">git-rebase unchanged</span> <em class="date">6/22/11</em></a>
-    </li>
-    <li>
-      <a href="#"><span class="version">1.7.8.2</span> <span class="changes no">git-rebase unchanged</span> <em class="date">5/22/11</em></a>
-    </li>
+    <% @versions.each do |v| %>
+      <li>
+      <a href="#">
+        <span class="version"><%= v[:name] %></span>
+        <% if v[:changed] %>
+          <span class="changes no"><%= @file.name %> unchanged</span>
+        <% else %>
+          <span class="changes yes"><%= @file.name %> updated</span>
+        <% end %>
+        <em class="date"><%= v[:time].strftime("%m/%d/%y") %></em>
+      </a>
+      </li>
+    <% end %>
     <li>
       <a class="more" href="#">See more previous releases →</a>
     </li>
