proper last changed version

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -1,10 +1,10 @@
 <a class="dropdown-trigger" id="reference-versions-trigger" data-panel-id="previous-versions-dropdown" href="#">Version <%= @version.name %> ▾</a>
-<span class="light"><%= @file.name %> last updated in 1.7.9.0</span>
+<span class="light"><%= @file.name %> last updated in <%= @last.version.name %></span>
 <div class='dropdown-panel left' id='previous-versions-dropdown'>
   <ol class='reference-previous-versions'>
     <% @versions.each do |v| %>
       <li>
-      <a href="#">
+      <a href="/ref/<%= @file.name %>/<%= v[:name] %>">
         <span class="version"><%= v[:name] %></span>
         <% if v[:changed] %>
           <span class="changes no"><%= @file.name %> unchanged</span>
