--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,9 @@
 %footer
   %div.site-source
-    The <a href="#">source for this page</a> (and this <a href="#">entire site</a>) is hosted on GitHub.<br>
+    The <a href="https://github.com/git/gitscm">source for this site</a> is hosted on GitHub.<br>
     Patches, suggestions, and comments are welcome.
 
   %div.sfc-member
-    Git is a member of the <a href="#">Software Freedom Conservancy</a>
+    Git is a member of the <a href="http://sfconservancy.org/donate/">Software Freedom Conservancy</a>
 
 = javascript_include_tag "jquery-1.7.1.min.js", "jquery-ui-1.8.18.custom.min.js", "jquery.defaultvalue.js", "site.js"
