--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -32,7 +32,10 @@
     %div#front-book
       <img src="/images/pro-git-56x74.jpg" />
       %p
-        <strong><a href="#">Pro Git</a></strong> by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
+        <strong><a href="/book">Pro Git</a></strong> 
+        by Scott Chacon is available to 
+        <a href="/book">read online for free</a>. 
+        Dead tree versions are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&tag=prgi-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=1430218339">Amazon.com</a>.
 
   %section#front-downloads
     %div.monitor.mac
@@ -57,20 +60,20 @@
   %h3 Companies &amp; Projects Using Git
 
   %ul
-    %li= link_to "Facebook", "#", {:class => 'facebook'}
-    %li= link_to "Google", "#", {:class => 'google'}
-    %li= link_to "Twitter", "#", {:class => 'twitter'}
-    %li= link_to "Microsoft", "#", {:class => 'microsoft'}
-    %li= link_to "LinkedIn", "#", {:class => 'linked-in'}
-    %li= link_to "Linux", "#", {:class => 'linux'}
-    %li= link_to "Perl", "#", {:class => 'perl'}
-    %li= link_to "PostgreSQL", "#", {:class => 'postgresql'}
+    %li= link_to "Facebook", "https://github.com/facebook", {:class => 'facebook'}
+    %li= link_to "Google", "https://github.com/google", {:class => 'google'}
+    %li= link_to "Twitter", "https://github.com/twitter", {:class => 'twitter'}
+    %li= link_to "Microsoft", "https://github.com/microsoft-dpe", {:class => 'microsoft'}
+    %li= link_to "LinkedIn", "https://github.com/linkedin", {:class => 'linked-in'}
+    %li= link_to "Linux", "http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=summary", {:class => 'linux'}
+    %li= link_to "Perl", "http://perl5.git.perl.org/perl.git", {:class => 'perl'}
+    %li= link_to "PostgreSQL", "http://git.postgresql.org/gitweb/", {:class => 'postgresql'}
 
-    %li= link_to "Android", "#", {:class => 'android'}
-    %li= link_to "Debian", "#", {:class => 'debian'}
-    %li= link_to "Ruby on Rails", "#", {:class => 'rails'}
-    %li= link_to "Qt", "#", {:class => 'qt'}
-    %li= link_to "Gnome", "#", {:class => 'gnome'}
-    %li= link_to "Eclipse", "#", {:class => 'eclipse'}
-    %li= link_to "KDE", "#", {:class => 'kde'}
-    %li= link_to "X", "#", {:class => 'x'}
+    %li= link_to "Android", "https://android-review.googlesource.com/#/q/status:open,n,z", {:class => 'android'}
+    %li= link_to "Debian", "http://anonscm.debian.org/gitweb/", {:class => 'debian'}
+    %li= link_to "Ruby on Rails", "https://github.com/rails/rails", {:class => 'rails'}
+    %li= link_to "Qt", "http://qt.gitorious.org/", {:class => 'qt'}
+    %li= link_to "Gnome", "http://git.gnome.org/browse/", {:class => 'gnome'}
+    %li= link_to "Eclipse", "http://git.eclipse.org/c/", {:class => 'eclipse'}
+    %li= link_to "KDE", "http://quickgit.kde.org/", {:class => 'kde'}
+    %li= link_to "X", "http://www.x.org/wiki/Development/BuildingX?action=show&redirect=Development%2Fgit", {:class => 'x'}
