--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -6,4 +6,4 @@
   %div.sfc-member
     Git is a member of the <a href="http://sfconservancy.org/donate/">Software Freedom Conservancy</a>
 
-= javascript_include_tag "jquery-1.7.1.min.js", "jquery-ui-1.8.18.custom.min.js", "jquery.defaultvalue.js", "site.js"
+= javascript_include_tag "jquery-1.7.1.min.js", "jquery-ui-1.8.18.custom.min.js", "jquery.defaultvalue.js", "session.min.js", "site.js"
