partial copy of jasons work

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag "modernizr.js"
     /[if (gte IE 6)&(lte IE 8)]
       = javascript_include_tag "selectivizr-min.js"
-    = javascript_include_tag "http://use.typekit.com/lmc6xsg.js"
+    = javascript_include_tag "http://use.typekit.com/jsq2fql.js"
     :javascript
       try{Typekit.load();}catch(e){}
     
