--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -27,7 +27,7 @@
           <a href="/community">
           <img src="/images/icons/nav-community.png" />
           <h3>Community</h3>
-          <p>Blogs, forums, mailing lists, and more.</p> </a>
+          <p>Mailing list, IRC, and more.</p> </a>
 
     %div#front-book
       <img src="/images/pro-git-56x74.jpg" />
@@ -45,15 +45,15 @@
       =link_to "Release Notes"
       %span.release-date (2012-26-03)
 
-      =link_to "Download for Mac", "#", {:class => 'button'}
+      =link_to "Download for Mac", "/download/mac", {:class => 'button', :id => 'download-link'}
 
     %table
       %tr
-        %td= link_to "Mac GUI Clients", "#", {:class => 'icon gui'}
-        %td= link_to "Older Releases", "#", {:class => 'icon older-releases'}
+        %td= link_to "Mac GUI Clients", "/download/gui/mac", {:class => 'icon gui', :id => 'gui-link'}
+        %td= link_to "Older Releases", "/downloads", {:class => 'icon older-releases'}
       %tr
-        %td= link_to "Windows Build", "#", {:class => 'icon windows'}
-        %td= link_to "Source Code", "#", {:class => 'icon source'}
+        %td= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
+        %td= link_to "Source Code", "/download/source", {:class => 'icon source'}
 
 
 %section#companies-projects
