starting to hook up about, community, downloads

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -269,6 +269,9 @@ a.icon {
   &.windows {
     background: transparent url(/images/icons/windows.png) 0 3px no-repeat;
   }
+  &.mac {
+    background: transparent url(/images/icons/apple.png) 5px 3px no-repeat;
+  }
   &.source {
     background: transparent url(/images/icons/source-code.png) 0 4px no-repeat;
   }
