--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -64,7 +64,7 @@
 
             - if content_for(:sidebar)
               %hr.sidebar
-              = yield_content :sidebar
+              = yield :sidebar
 
           %div#content
             ~yield
