--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,7 @@
 %header
   <a href="/"><img src="/images/logo.png" /></a>
   %span#tagline
-    <em>--</em>random-clever-tagline-here
+    =raw random_tagline
 
   %form#search
     <input id="search-text" placeholder="Search entire site..." autocomplete="off" type="text" />
