show latest versions

--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -1,8 +1,8 @@
 %div.monitor.mac
   %h4 Latest stable release
-  %span.version 1.7.9.5
+  %span.version= latest_version
 
-  =link_to "Release Notes"
-  %span.release-date (2012-26-03)
+  =link_to "Release Notes", "/release/notes"
+  %span.release-date= latest_release_date
 
   =link_to "Download for Mac", "#", {:class => 'button'}
