--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -2,7 +2,7 @@
   %h4 Latest stable release
   %span.version= latest_version
 
-  =link_to "Release Notes", "/release/notes"
+  =link_to "Release Notes", latest_relnote_url
   %span.release-date= latest_release_date
 
   =link_to "Download for Mac", "/download/mac", {:class => 'button', :id => 'download-link'}
