linked up downloads area, fix sidebar highlighting

--- a/app/views/doc/book.html.erb
+++ b/app/views/doc/book.html.erb
@@ -1,3 +1,6 @@
+<% @section    = 'documentation' %>
+<% @subsection = 'book' %>
+
 <div id='main'>
   <h1>Book</h1>
   <img style="float:right;margin: -20px 40px 0 40px;" src="/images/pro-git-118x157.jpg" />
