--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -1,3 +1,6 @@
+<% @section    = 'documentation' %>
+<% @subsection = 'external-links' %>
+
 <div id='main'>
   <h1>External Links</h1>
   <h2>Tutorials</h2>
