--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,3 +1,6 @@
+<% @section    = 'documentation' %>
+<% @subsection = 'reference' %>
+
 <div id='reference-version'>
   <%= render 'doc/topics' %>
   <%= render 'doc/versions' %>
