--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -10,7 +10,7 @@
   %h1 GUI Clients
 
   %p
-    Git comes with a built-in GUI (<strong>git-gui</strong>, <strong>gitk</strong>), but there are several third-party tools for users looking for platform-specific experience.
+    Git comes with built-in GUI tools for committing (<a href="/ref/git-gui">git-gui</a>) and browsing (<a href="/ref/gitk">gitk</a>), but there are several third-party tools for users looking for platform-specific experience.
 
   %p
     =link_to "Only show GUIs for my OS (Windows)", "#", {:class => "subtle-button", :id => "gui-os-filter", 'data-os' => 'windows'}
