--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -1,3 +1,6 @@
+<% @section    = 'documentation' %>
+<% @subsection = 'reference' %>
+
 <div id='main'>
   <h1>Reference</h1>
   <div class='callout quickref'>
