add version order field for quick version sorting

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -43,10 +43,10 @@
     %table
       %tr
         %td= link_to "Mac GUI Clients", "/download/gui/mac", {:class => 'icon gui', :id => 'gui-link'}
-        %td= link_to "Older Releases", "/downloads", {:class => 'icon older-releases'}
+        %td= link_to "Older Releases", "/downloads/installers", {:class => 'icon older-releases'}
       %tr
         %td= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
-        %td= link_to "Source Code", "/download/source", {:class => 'icon source'}
+        %td= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
 
 
 %section#companies-projects
