add gui options to download landing page

--- a/app/views/downloads/download.html.erb
+++ b/app/views/downloads/download.html.erb
@@ -4,7 +4,7 @@
 
       <h1>Downloading Git</h1>
 
-      <p>You are downloading for the <%= @platform.capitalize %> platform.</p>
+      <p>You are downloading Git for the <%= @platform.capitalize %> platform.</p>
 
       <p>You are downloading version X, 
       which is the most recent maintained build for this platform.
@@ -30,7 +30,53 @@
     </div>
   </div>
 
-  <h2>What's Next</h2>
-  <p>Next: <a href="/book">Getting Started with Git</a></p>
+  <h2>Getting Started with Git</h2>
+  <p>
+    Now that you have downloaded Git, here are some ways to get started using it.
+    <ul>
+      <li>Read <a href="/book">the book</a>
+    </ul>
+  </p>
+
+  <h2>Get a GUI</h2>
+
+  <p>If you prefer using a graphical interface, you can try one that is
+  freely available for this platform:</p>
+
+  <% if @platform == 'mac' %>
+    <div class="two-column">
+      <div class="column-left">
+        <ul class="gui-thumbnails"><li>
+          <%= link_to(image_tag('guis/github-for-mac.png'), "http://mac.github.com/") %>
+          <h4>GitHub for Mac</h4>
+        </li></ul>
+      </div>
+      <div class="column-right">
+        <ul class="gui-thumbnails"><li>
+          <%= link_to(image_tag('guis/sourcetree.png'), "http://www.sourcetreeapp.com/") %>
+          <h4>SourceTree</h4>
+        </li></ul>
+      </div>
+    </div>
+  <% else %>
+    <div class="two-column">
+      <div class="column-left">
+        <ul class="gui-thumbnails"><li>
+          <%= link_to(image_tag('guis/git-extensions.png'), "http://code.google.com/p/gitextensions/") %>
+          <h4>Git Extensions</h4>
+        </li></ul>
+      </div>
+      <div class="column-right">
+        <ul class="gui-thumbnails"><li>
+          <%= link_to(image_tag('guis/git-cola.png'), "http://git-cola.github.com/") %>
+          <h4>Git Cola</h4>
+        </li></ul>
+      </div>
+    </div>
+  <% end %>
+
+  <br/>
+
+  <p>Other graphical clients are available on our <a href="/downloads/guis">GUI Download</a> page</p>
 
 </div>
