task to find mac downloads, fill in download landing page data

--- a/app/views/downloads/download.html.erb
+++ b/app/views/downloads/download.html.erb
@@ -4,15 +4,16 @@
 
       <h1>Downloading Git</h1>
 
-      <p>You are downloading Git for the <%= @platform.capitalize %> platform.</p>
 
-      <p>You are downloading version X, 
+      <p>You are downloading version <strong><%= @download.version.name %></strong> of
+      Git for the <strong><%= @platform.capitalize %> platform</strong>,
       which is the most recent maintained build for this platform.
-      It was released on Y.
+      It was released on <%= @download.version.committed.strftime("%Y-%m-%d") %>,
+      <strong><%= time_ago_in_words @download.version.committed %> ago</strong>.
       </p>
 
       <p>
-      The current source code release is Z. 
+      The current source code release is <strong><%= @latest.name %></strong>.
       If you want the newer version, you can build it from <a href="https://github.com/git/git">the source code</a>.</p>
 
     </div>
