copy from jason

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -57,6 +57,22 @@ aside {
   }
 }
 
+.callout#more-downloads {
+  h2 {
+    margin-top: 0;
+  }
+  .column-left {
+    width: 47%;
+  }
+  .column-right {
+    width: 45%;
+  } 
+  p {
+    padding-bottom: 1em;
+    line-height: 1.4;
+  }
+}
+
 #masthead {
   height: 295px;
   margin-top: -20px;
@@ -140,10 +156,10 @@ a.dropdown-trigger {
   &.active {
     position: relative;
     z-index: 200;
-    background-color: #fff;
+    background-color: #fff ! important;
     @include border-top-left-radius(3px);
     @include border-top-right-radius(3px);
-    border: solid 1px $base-border-color;
+    border: solid 1px darken($base-border-color, 8%);
     border-bottom: none;
   }
 }
@@ -151,7 +167,7 @@ a.dropdown-trigger {
 .dropdown-panel {
   display: none;
   background-color: #fff;
-  border: solid 1px $base-border-color;
+  border: solid 1px darken($base-border-color, 8%);
   position: absolute;
   z-index: 199;
   @include border-radius(3px);
