--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -57,6 +57,11 @@ ul.books-list {
 
 table.binaries {
   td {
-    padding-right: 12px;
+    padding: 8px 20px 6px 0;
+    position: relative;
+  }
+  a {
+    font-weight: bold;
+    border: solid 1px transparent;
   }
 }
