--- a/app/assets/stylesheets/reference.css.scss
+++ b/app/assets/stylesheets/reference.css.scss
@@ -30,6 +30,13 @@
 
 #previous-versions-dropdown {
   padding-top: 6px;
+  width: 330px;
+  header {
+    padding: 0 12px;
+    margin: 0;
+    font-size: 12px;
+    font-weight: normal;
+  }
   footer {
     margin-top: 0;
     padding: 4px 12px;
@@ -37,6 +44,8 @@
     font-weight: normal;
     font-size: 11px;
     color: $font-color;
+    @include border-bottom-left-radius(3px);
+    @include border-bottom-right-radius(3px);
     input {
       font-size: 11px;
       border: solid 1px #e2e0d8;
@@ -89,13 +98,16 @@
 
 ol.reference-previous-versions {
   @extend .unstyled;
+  margin-top: 3px;
   margin-bottom: 0;
+  border-top: dotted 1px #e3e3e1;
   li {
     a {
       @include clearfix;
       top: 0 ! important;
       display: block;
       padding: 2px 12px;
+      border-bottom: dotted 1px #e3e3e1;
       &:hover {
         background-color: #edf7f8;
       }
@@ -106,46 +118,48 @@ ol.reference-previous-versions {
         float: left;
         min-width: 40px;
       }
-      span.changes {
-        padding-left: 18px;
+      span.diff {
+        padding-left: 12px;
         padding-right: 16px;
-        font-size: 11px;  
-        font-weight: normal;
-        color: $font-color;
-        float: left;
-        &.yes {
-          background: transparent url(/images/icons/change-yes.png) 10px 8px no-repeat;
-        }
-        &.no {
-          background: transparent url(/images/icons/change-no.png) 10px 8px no-repeat;
-          color: $light-font-color;
+        img {
+          @include inline-block;
+          margin-right: -1px;
         }
       }
       em.date {
         float: right;
+        margin-right: 150px;
         font-size: 11px;
         color: $light-font-color;
         font-weight: normal;
+        font-style: normal;
+      }
+      &.more {
+        border-bottom: none; 
       }
     }
     &.no-change {
       @include clearfix;
-//      border-top: solid 1px #f6f6f4;
-//      border-bottom: solid 1px #f6f6f4;
-      padding: 2px 12px;
+      position: absolute;
+      right: 0px;
+      margin-top: -6px;
+      width: auto;
+      z-index: 10;
+      padding: 0;
       font-weight: normal;
       font-size: 11px;
       line-height: 1.2;
       color: $light-font-color;
-      background-color: #fcfcfa;
       text-align: center;
-      span.version {
+      span {
         float: left;
-      }
-      span.changes.no {
-        float: right;
-        font-size: 11px;
+        @include inline-block;
+        @include border-top-left-radius(10px);
+        @include border-bottom-left-radius(10px);
+        font-size: 10px;
         font-style: italic;
+        background-color: #f5f5f3;
+        padding: 0 5px;
       }
     }
   }
