copy from jason

--- a/app/assets/stylesheets/front-page.css.scss
+++ b/app/assets/stylesheets/front-page.css.scss
@@ -272,6 +272,12 @@ a.icon {
   &.mac {
     background: transparent url(/images/icons/apple.png) 5px 3px no-repeat;
   }
+  &.debian {
+    background: transparent url(/images/icons/debian.png) 6px 4px no-repeat;
+  }
+  &.solaris {
+    background: transparent url(/images/icons/solaris.png) 0 7px no-repeat;
+  }
   &.source {
     background: transparent url(/images/icons/source-code.png) 0 4px no-repeat;
   }
