fully remove installers page, hook up some links

--- a/app/views/downloads/download.html.erb
+++ b/app/views/downloads/download.html.erb
@@ -1,3 +1,6 @@
+<%- @section = "downloads" %>
+<%- @subsection = "" %>
+
 <div id="main">
   <div class="two-column">
     <div class="column-left">
@@ -21,11 +24,11 @@
       <div class="monitor <%= @platform %>">
 
         <h4>Your download is starting...</h4>
-        <iframe width="1" height="1" frameborder="0" src="<%= @dl_link %>"></iframe>
+        <iframe width="1" height="1" frameborder="0" src="<%= @download.url %>"></iframe>
 
         <p>&nbsp;</p>
         
-        <em>If it does not, <a id="download-link" href="<%= @dl_link %>">click here</a> to download manually</em>
+        <em>If it does not, <a id="download-link" href="<%= @download.url %>">click here</a> to download manually</em>
 
       </div>
     </div>
