fully remove installers page, hook up some links

--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -7,18 +7,18 @@
       The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
 %div#main
-  %h1 Downloads
 
   %div.two-column
     %div.column-left
+      %h1 Downloads
       %div.callout
         %table.binaries
           %tr
-            %td= link_to "Mac OS X", "#", {:class => 'icon mac'}
-            %td= link_to "Windows", "#", {:class => 'icon windows'}
+            %td= link_to "Mac OS X", "/download/mac", {:class => 'icon mac'}
+            %td= link_to "Windows", "/download/win", {:class => 'icon windows'}
           %tr
-            %td= link_to "Debian", "#", {:class => 'icon debian'}
-            %td= link_to "Solaris v9-10", "#", {:class => 'icon solaris'}
+            %td= link_to "Debian", "/download/linux", {:class => 'icon debian'}
+            %td= link_to "Solaris v9-10", "/download/linux", {:class => 'icon solaris'}
 
       %p
         <a href="http://code.google.com/p/git-core/downloads/list">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
@@ -34,7 +34,7 @@
         %h2 GUI Clients
 
         %p
-          Git comes with a built-in GUI (<strong>git-gui</strong>, <strong>gitk</strong>), but there are several third-party tools for users looking for platform-specific experience.
+          Git comes with built-in GUI tools (<a>git-gui</a>, <a>gitk</a>), but there are several third-party tools for users looking for a platform-specific experience.
 
         %p
           %strong= link_to "View GUI Clients →", "/downloads/guis"
